--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <script src="./index_files/jquery.min.js"></script>
 <script src="./index_files/widgets-sdk.0.3.1.js"></script>
 <script type='text/javascript' id='rsyswpsdk' src='https://api.pushio.com/webpush/sdk/wpIndex_min.js' wpconfig = '{"appserviceKey":"BHkUaqF-mJxYs9oSkR8TYmyfOnbDZ24wiNEloFXGSbyzQ3zz7-IRVfatceJRza5BB6W6VaM7r9UL8_2zIAc7guU=","apiKey":"ABERJTz-FMgOAht4aNQPmHn60","accountToken":"ABEjXW4zOVJYL6soMj1REOLrE","appver":"0.0.0","apiHost":"https://api.pushio.com","lazy":false}'></script>
-<meta name="viewport"><script>
+<script type='text/javascript'>importScripts('https://api.pushio.com/webpush/sdk/service_min.js');
+var config = '{"appserviceKey":"BHkUaqF-mJxYs9oSkR8TYmyfOnbDZ24wiNEloFXGSbyzQ3zz7-IRVfatceJRza5BB6W6VaM7r9UL8_2zIAc7guU=","apiKey":"ABERJTz-FMgOAht4aNQPmHn60","accountToken":"ABEjXW4zOVJYL6soMj1REOLrE","appver":"0.0.0","apiHost":"https://api.pushio.com","lazy":false}';
+	orawp.init(config);</script>
+	<meta name="viewport"><script>
 			window.SBX_dlc=window.SBX_dlc||{};
 			window.SBX_dlc.settings=JSON.parse("{\"consoleLog\":false,\"eventColors\":true,\"eventCustomColors\":{\"custom1\":\"\",\"custom2\":\"\",\"custom3\":\"\"},\"gtmInjectId\":\"\",\"gtmInjectRule\":\"\",\"preventDefault\":false,\"jsonDefaultViewMode\":true}");
 		</script></head>
