--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html><script type="text/javascript" src="chrome-extension://ffljdddodmkedhkcjhpmdajhjdbkogke/js/datalayer-checker.js"></script><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <script src="./index_files/jquery.min.js"></script>
 <script src="./index_files/widgets-sdk.0.3.1.js"></script>
-<script type='text/javascript' id='rsyswpsdk' src='https://https://agalavotti.github.io/pumademo/wpIndex_min.js' wpconfig = '{"appserviceKey":"BHkUaqF-mJxYs9oSkR8TYmyfOnbDZ24wiNEloFXGSbyzQ3zz7-IRVfatceJRza5BB6W6VaM7r9UL8_2zIAc7guU=","apiKey":"ABERJTz-FMgOAht4aNQPmHn60","accountToken":"ABEjXW4zOVJYL6soMj1REOLrE","appver":"0.0.0","apiHost":"https://api.pushio.com","lazy":false}'></script>
+<script type='text/javascript' id='rsyswpsdk' src='https://agalavotti.github.io/pumademo/wpIndex_min.js' wpconfig = '{"appserviceKey":"BHkUaqF-mJxYs9oSkR8TYmyfOnbDZ24wiNEloFXGSbyzQ3zz7-IRVfatceJRza5BB6W6VaM7r9UL8_2zIAc7guU=","apiKey":"ABERJTz-FMgOAht4aNQPmHn60","accountToken":"ABEjXW4zOVJYL6soMj1REOLrE","appver":"0.0.0","apiHost":"https://api.pushio.com","lazy":false}'></script>
 </head>
 <body><div id="ct-modal" style="opacity: 0; z-index: -10000; margin: auto; width: 90%; position: fixed; inset: 10% 0px 0px;"><button type="button" aria-label="Close Modal" style="position: relative; right: 7px; bottom: 2px; display: none; float: right; padding: 0px; background: none; border: none; color: rgb(255, 255, 255); font-size: 20px; cursor: pointer; text-transform: uppercase;">&#10005;</button><div style="clear: right; overflow: auto;"></div></div><div id="ct-modal-background" style="display: none; position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 1000; background-color: rgb(0, 0, 0); opacity: 0.7;"></div>
 <style>
