--- a/index.html
+++ b/index.html
@@ -34,16 +34,9 @@ iframe {
 }
 
 </style>
-<div>
-<img src="./index_files/be982d86c62674978f5eea66aba3ba57-760x300.jpg" style="width:90%; height:200px">
-</div>
-<div class="container">
-<img src="./index_files/PUMA-1.jpg" style="width:40%;">
-<iframe frameborder="0" data-widget-id="16470" src="./index_files/saved_resource.html" version="1" title="account overview" style="width: 100%; height: 363px;" class=""></iframe>
-</div><img src="./index_files/M06.jpg" class="icon" style="max-width:90% !important;" ng-if="!user.loggedOut">
-<iframe frameborder="0" data-widget-id="16450" src="./index_files/saved_resource(1).html" version="1" title="activity list" style="width: 100%; height: 603px;" class=""></iframe>
-<iframe frameborder="0" data-widget-id="16458" src="./index_files/saved_resource(2).html" version="1" title="reward list" style="width: 100%; height: 576px;" class=""></iframe>
-<iframe frameborder="0" data-widget-id="16472" src="./index_files/saved_resource(3).html" version="1" title="invite friends" style="width: 100%; height: 371px;" class=""></iframe>
+<div class="ct-widget" data-widget-id="13594" data-src="https://partner14-widgets-sb.crowdtwist.com/widgets/t/account-overview/13594"></div>
+<div class="ct-widget" data-widget-id="16450" data-src="https://partner14-widgets-sb.crowdtwist.com/widgets/t/activity-list/16450"></div>
+
 
 
 
